[package]
name = "bgmrank-cli"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Command line tool of personal rank statistics for Bangumi"
repository = "https://github.com/upsuper/bgmrank"
license = "MIT"
keywords = ["bangumi"]

[dependencies]
enum-set = "0.0.6"
getopts = "0.2"
libbgmrank = { path = "../libbgmrank", version = "0.0.1" }
