[package]
name = "bgmrank-cli"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Command line tool of personal rank statistics for Bangumi"
repository = "https://github.com/upsuper/bgmrank"
license = "MIT"
keywords = ["bangumi"]
edition = "2021"

[[bin]]
name = "bgmrank"
path = "main.rs"

[dependencies]
enumset = "1"
getopts = "0.2"
libbgmrank = { path = "../libbgmrank", version = "0.0.1" }
strum = "0.25"
