[package]
name = "libbgmrank"
version = "0.0.1"
authors = ["Xidorn Quan <me@upsuper.org>"]
description = "Personal rank statistics for Bangumi"
repository = "https://github.com/upsuper/bgmrank"
license = "MIT"
keywords = ["bangumi"]
edition = "2018"

[lib]
name = "libbgmrank"
path = "lib.rs"

[dependencies]
html5ever = "0.25"
kuchiki = "0.8"
strum = { version = "0.23", features = ["derive"] }
enumset = "1"

[dependencies.reqwest]
version = "0.9.16"
default-features = false
features = ["rustls-tls"]

[dev-dependencies]
float-cmp = "0.4.0"
